--- a/react_source/package.json
+++ b/react_source/package.json
@@ -13,7 +13,9 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "aos": "^2.3.4",
+    "bootstrap": "^5.3.3",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
