--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "DEV=true next dev",
-    "gh-build": "next build",
+    "gh-build-deploy": "next build && gh-pages -d out",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
